# 2023-1-Rasterizacion

./: .gitignore  CMakeLists.txt
E1-basico/: CMakeLists.txt  glad.c  hello_triangle.cpp  hello_triangle_indexed.cpp  main.cpp  shaders_uniform.cpp
E1-basico/shader/: shaders_class.cpp  transformations.cpp  transformations2.cpp
E2-Iluminacion/: CMakeLists.txt
E2-Iluminacion/2.1.basic_lighting_diffuse/: basic_lighting_diffuse_tetraedro.cpp
E3-Objetos/: BoundingVolume.h  CMakeLists.txt  Objeto.cpp  Objeto.h  glut_ply.cpp  glut_ply.h  main.cpp
E4-texturas/: 9.3.normal_visualization.gs  CMakeLists.txt  basico1.fs  basico1.vs  basico_0.fs  basico_textura.fs  basico_textura.vs  basico_textura_luces.fs  glut_ply.cpp  glut_ply.h  main.cpp
E5-Curvas/: CMakeLists.txt  Objeto.h  glut_ply.cpp  glut_ply.h  main.cpp
E6-Sombras/: CMakeLists.txt  shadow_mapping_base.cpp
E7-NormalMapping/: CMakeLists.txt  normal_mapping.cpp
